--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "jest": "^30.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.539.0",
-    "next": "^15.4.5",
+    "next": "^16.1.0",
     "next-auth": "^4.24.11",
     "next-seo": "^6.8.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "recoil": "^0.7.7",
     "redux": "^5.0.1",
